--- a/css/styles.css
+++ b/css/styles.css
@@ -1014,9 +1014,9 @@ button.submit {
     color: #253d84;
 }
 .buy-now-btn{
-    background-color: #ffddd2;
-    border: 2px solid #ffddd2;
-    color: white;
+    background-color: black;
+    border: 2px solid black;
+    color: #ffddd2;
 }
 .buy-now-btn:hover{
     background-color: #fff;
@@ -1120,5 +1120,194 @@ button.submit {
     }
 }
     
+.wrapper {
+	max-width: 1000px;
+	margin: 0 auto;
+}
+.wrapper h1 {
+	padding: 20px 0;
+	text-align: center;
+	text-transform: uppercase;
+}
+.project {
+	display: flex;
+}
+.shop {
+	flex: 75%;
+}
+.box {
+	display: flex;
+	width: 100%;
+	height: 210px;
+	overflow: hidden;
+	margin-bottom: 20px;
+	background: #fff;
+	transition: all .3s ease;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+}
+.box:hover {
+	border: none;
+	transform: scale(1.01);
+}
+.box img {
+	width: 130px;
+	height: 130px;
+	object-fit: cover;
+    margin: auto 20px;
+}
+.content {
+	padding: 20px;
+	width: 100%;
+	position: relative;
+}
+.content h3 {
+	font-size: 20px;
+}
+.content h4 {
+	font-weight: normal;
+    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+}
+.btn-area {
+	position: absolute;
+	bottom: 40px;
+	right: 20px;
+	padding: 10px 25px;
+	background-color: darkred;
+	color: white;
+	cursor: pointer;
+	border-radius: 30px;
+}
+.btn-area:hover {
+	opacity: 0.8;
+    transition: 0.3s;
+}
+.unit {
+    font-size: 14px;
+    font-weight: normal;
+}
+.unit input {
+	width: 40px;
+	padding: 5px;
+	text-align: center;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    font-size: 14px;
+    font-weight: 500;
+    margin: 0 10px;
+}
+.btn-area i {
+	margin: auto 5px;
+}
+.right-bar {
+	flex: 25%;
+    max-height: 800px;
+	margin-left: 20px;
+	padding: 20px;
+	border-radius: 10px;
+	background: #fff;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+.right-bar input {
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    margin-left: -10px;
+    text-align: center;
+}
+.right-bar hr {
+	margin-bottom: 25px;
+}
+.right-bar p {
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 30px;
+	font-size: 20px;
+}
+.right-bar a {
+	background-color: #253d84;
+	color: #fff;
+	text-decoration: none;
+	display: block;
+	text-align: center;
+	height: 40px;
+	line-height: 40px;
+	font-weight: 900;
+    border: 1px solid #253d84;
+    border-radius: 30px;
+}
+.right-bar i {
+	margin-right: 15px;
+}
+.right-bar a:hover {
+	background-color: white;
+    color: #253d84;
+    border: 1px solid #253d84;
+    transition: 0.3s;
+}
+.empty-cart-text {
+    text-align: center;
+    font-size: 20px;
+    margin-top: 50px;
+    font-weight: normal;
+}
+@media screen and (max-width: 700px) {
+	.content h3 {
+		font-size: 18px;
+	}
+	.content h4 {
+		font-size: 16px;
+	}
+	.btn2 {
+		display: none;
+	}
+	.box {
+		height: 180px;
+	}
+	.box img {
+		width: 100px;
+        height: 100px;
+	}
+    .btn-area {
+        padding: 10px 15px;
+    }
+}
+@media screen and (max-width: 900px) {
+	.project {
+		flex-direction: column;
+	}
+	.right-bar {
+		margin-left: 0;
+		margin-bottom: 20px;
+	}
+}
+@media screen and (max-width: 1250px) {
+	.wrapper {
+		max-width: 95%;
+	}
+}
 
-
+@media screen and (max-width: 400px) {
+    .content h3 {
+        font-size: 16px;
+	}
+	.content h4 {
+		font-size: 14px;
+	}
+	.btn2 {
+		display: none;
+	}
+	.box {
+		height: 180px;
+	}
+	.box img {
+		width: 70px;
+        height: 70px;
+	}
+    .btn-area {
+       padding: 8px 10px;
+    }
+   
+}
