--- a/css/styles.css
+++ b/css/styles.css
@@ -588,11 +588,26 @@ button.submit {
     bottom: 0;
     cursor: pointer;
   }
+
+    .product:hover .detailsAdmin {
+        bottom: 0;
+        cursor: pointer;
+    }
   
   .details {
     position: absolute;
     width: 100%;
     bottom: -145px;
+    background: #fff;
+    padding: 10px;
+    box-sizing: border-box;
+    transition: 0.5s;
+  }
+
+  .detailsAdmin {
+    position: absolute;
+    width: 100%;
+    bottom: -175px;
     background: #fff;
     padding: 10px;
     box-sizing: border-box;
@@ -605,12 +620,25 @@ button.submit {
     font-size: 16px;
     width: 100%;
   }
+
+    .detailsAdmin h2 {
+        margin: 0;
+        padding: 0;
+        font-size: 16px;
+        width: 100%;
+    }
   
   .details h2 span {
     font-size: 12px;
     color: #ccc;
     font-weight: normal;
   }
+
+    .detailsAdmin h2 span {
+        font-size: 12px;
+        color: #ccc;
+        font-weight: normal;
+    }
   
   .details .price {
     position: absolute;
@@ -620,6 +648,15 @@ button.submit {
     color: #253d84;
     font-size: 17px;
   }
+
+    .detailsAdmin .price {
+        position: absolute;
+        top: 10px;
+        right: 20px;
+        font-weight: bold;
+        color: #253d84;
+        font-size: 17px;
+    }
 
   .products-wrapper-category {
     margin-bottom: 30px;
@@ -667,8 +704,109 @@ button.submit {
     opacity: 0.9;
   }
 
+  #add-product {
+    margin-left: 30px;
+    display: flex;
+  }
+
+  #add-product-href {
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    background: transparent;
+    color: black;
+    width: 180px;
+    height: 180px;
+    border-radius: 15px;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    text-decoration: none;
+    transition: 0.3s;
+    cursor: pointer;
+    font-size: 18px;
+  }
+
+  #categories-title {
+    margin-left: 30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    font-size: 25px;
+    font-weight: bold;
+    }
+
+    #add-product-href:hover {
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+    }
+
+   #categories-wrapper {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-gap: 20px;
+    margin: 0 auto 0 auto;
+    margin-bottom: 30px;
+    margin-left: 30px;
+    }
+    
+
+
+    .category {
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    background: transparent;
+    color: black;
+    width: 180px;
+    height: 180px;
+    border-radius: 15px;
+    font-size: 18px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    text-decoration: none;
+    transition: 0.3s;
+    cursor: pointer;
+    font-size: 18px;
+    display: grid;
+    }
+
+    .category:hover {
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+        cursor: default;
+    }
+
+    .category a {
+        padding: 10px;
+        color: #fff;
+        text-decoration: none;
+    }
+
+    #admin-products-nav {
+        display: flex;
+        align-content: center;
+        justify-content: center;
+        text-align: center;
+        margin-bottom: 30px;
+        margin-top: 20px;
+    }
+
+    .admin-products-nav-title{
+        margin: 0 10px;
+        font-size: 30px;
+        font-weight: bold;
+        color: #253d84
+    }
+
+    .admin-products-nav-title:hover {
+       cursor: pointer;
+       transform: scale(1.1);
+    }
+
+
 @media screen and (max-width: 1200px) {
     #products-wrapper {
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    #categories-wrapper {
         grid-template-columns: repeat(4, 1fr);
     }
 }
@@ -677,6 +815,16 @@ button.submit {
     #products-wrapper {
         grid-template-columns: repeat(3, 1fr);
         margin-left: auto;
+    }
+
+    #categories-wrapper {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .category {
+        width: 90%;
+        margin-bottom: 30px;
+        margin-left: 0;
     }
 
     .product {
@@ -688,16 +836,35 @@ button.submit {
         width: 50%;
         margin: 30px auto 0;
       }
+
+      .admin-products-nav-title {
+        font-size: 25px;
+      }
 }
 
 @media screen and (max-width: 768px) {
     #products-wrapper {
         grid-template-columns: repeat(2, 1fr);
     }
+
+    #categories-wrapper {
+        grid-template-columns: repeat(2, 1fr);
+
+    }
+
+    .category {
+        width: 90%;
+        margin-bottom: 30px;
+    }
+
     .product .imgbox img {
         display: block;
         width: 40%;
         margin: 30px auto 0;
+      }
+
+      .admin-products-nav-title {
+        font-size: 25px;
       }
 }
 
@@ -705,11 +872,46 @@ button.submit {
     #products-wrapper {
         grid-template-columns: repeat(1, 1fr);
     }
+
+    #categories-wrapper {
+        grid-template-columns: repeat(1, 1fr);
+        align-items: center;
+        margin-left: 0;
+    }
+
+    .category {
+        width: 90%;
+        margin-bottom: 30px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #categories-title {
+        margin-left: 0;
+        text-align: center;
+    }
+
     .product .imgbox img {
         display: block;
         width: 20%;
         margin: 30px auto 0;
       }
+
+      #add-product-href {
+        width: 90%;
+        height: 100%;
+      }
+
+        #add-product {
+            justify-content: center;
+            align-items: center;
+            margin-left: 0;
+            height: 210px;
+        }
+
+        .admin-products-nav-title {
+            font-size: 25px;
+          }
       
 }
 
@@ -717,10 +919,28 @@ button.submit {
     #products-wrapper {
         grid-template-columns: repeat(1, 1fr);
     }
+
+    #categories-wrapper {
+        grid-template-columns: repeat(1, 1fr);
+        align-items: center;
+        margin-left: 0;
+    }
+
+    .category {
+        width: 90%;
+        margin-bottom: 30px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
     .product .imgbox img {
         display: block;
         width: 30%;
         margin: 30px auto 0;
+      }
+
+      .admin-products-nav-title {
+        font-size: 25px;
       }
       
 }
@@ -732,6 +952,119 @@ button.submit {
     margin-bottom: 30px;
     color: black;
 }
+
+#delete-category-message h1 {
+    font-weight: bold;
+    color: #2b60ad;
+    margin-bottom: 30px;
+}
+
+#delete-category-message {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.message-button-confirm {
+    background: #2b60ad;
+    color: #fff;
+    width: 150px;
+    height: 50px;
+    border-radius: 15px;
+    font-size: 18px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    text-decoration: none;
+    transition: 0.3s;
+    cursor: pointer;
+    font-size: 18px;
+    margin-top: 30px;
+    margin-right: 20px;
+}
+
+.message-button-confirm:hover {
+    background: #253d84;
+    transform: scale(1.1);
+}
+
+.message-button-cancel {
+    background: darkred;
+    color: white;
+    width: 150px;
+    height: 50px;
+    border-radius: 15px;
+    font-size: 18px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    text-decoration: none;
+    transition: 0.3s;
+    cursor: pointer;
+    font-size: 18px;
+    margin-top: 30px;
+    border: 2px solid darkred;
+}
+
+.message-button-cancel:hover {
+    color: darkred;
+    background-color: white;
+    transform: scale(1.1);
+}
+
+
+#add-category-container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    z-index: 100;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+#add-category-container h1 {
+    font-weight: bold;
+    color: #2b60ad;
+    margin-bottom: 30px;
+}
+
+#add-category-container .form-control {
+    text-align: center;
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+}
+
+#add-category-container .form-control input {
+    text-align: center;
+}
+
+@media screen and (max-width: 992px) {
+    #add-category-container .form-control {
+        width: 85%;
+    }
+
+    
+}
+    
+
 
 @media screen and (max-width: 992px) {
     .category-title {
@@ -1091,9 +1424,6 @@ button.submit {
     .product-div-right{
         text-align: center;
     }
-    .product-rating{
-        justify-content: center;
-    }
     .product-description{
         max-width: 400px;
         margin-right: auto;
@@ -1187,6 +1517,16 @@ button.submit {
     font-size: 14px;
     font-weight: normal;
 }
+
+.unit a {
+    color: #253d84;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 13px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
 .unit input {
 	width: 40px;
 	padding: 5px;
@@ -1204,11 +1544,12 @@ button.submit {
 	flex: 25%;
     max-height: 800px;
 	margin-left: 20px;
-	padding: 20px;
+	padding: 50px;
 	border-radius: 10px;
 	background: #fff;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
+
 .right-bar input {
     width: 100%;
     padding: 10px;
@@ -1311,3 +1652,212 @@ button.submit {
     }
    
 }
+
+
+#users-container {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 20px;
+    margin: 20px 0;
+}
+
+.user-card {
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    background-color: #fff;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    width: 90%;
+    margin-left: 30px
+
+}
+
+.user-card:hover {
+    transform: scale(1.03);
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.user-card  h2 {
+   margin-left: 20px;
+}
+
+.user-card  p {
+    margin-left: 20px;
+ }
+
+ @media screen and (max-width: 942px) {
+   
+
+    .user-card {
+        margin-left: 0px;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+        
+    }
+
+    .user-card  h2 {
+        margin-left: 0px;
+    }
+
+    .user-card  p {
+        margin-left: 0px;
+    }
+    
+ }
+
+/* center #view-user-container in the middle of the page */
+
+#view-user-container {
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+#view-user-container form {
+    padding-bottom: 10px;
+}
+
+#view-user-container .form-control {
+    text-align: center;
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px auto ;
+}
+
+#view-user-container .form-control input {
+    text-align: center;
+}
+
+/* responsive */
+
+@media screen and (max-width: 942px) {
+    #view-user-container .form-control {
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    #view-user-container .form-control {
+        width: 90%;
+    }
+}
+
+#add-product-container {
+    margin-top: 150px;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+#add-product-container form {
+    padding-bottom: 10px;
+}
+
+#add-product-container .form-control {
+    text-align: center;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px auto ;
+}
+
+#add-product-container .form-control input {
+    text-align: center;
+}
+
+#add-product-container .form-control textarea {
+    text-align: center;
+    background: #e6e6e6;
+    color: #333;
+    letter-spacing: 0.5px;
+    border: none;
+    outline: none;
+    border-radius: 30px;
+    font-size: 1.1em;
+    resize: none;
+}
+
+#add-product-container .form-control select {
+    text-align: center;
+    background: #e6e6e6;
+    color: #333;
+    letter-spacing: 0.5px;
+    border: none;
+    outline: none;
+    border-radius: 30px;
+    font-size: 1.1em;
+    width: 555px;
+    height: 55px;
+}
+
+#add-product-container .form-control input[type="file"] {
+    text-align: center;
+    background: #e6e6e6;
+    color: #333;
+    letter-spacing: 0.5px;
+    border: none;
+    outline: none;
+    border-radius: 30px;
+    font-size: 1.1em;
+}
+
+#productPictureDisplay {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    margin: 10px auto;
+    display: block;
+}
+
+#productPictureDisplay:hover {
+    cursor: pointer;
+}
+
+#add-product-container h1 {
+    color: #2b60ad;
+}
+
+#add-product-container input[type="checkbox"] {
+    width: 30px;
+    height: 30px;
+    margin: 0 auto;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
